version/0.66/_sources/autoapi/pyedb/grpc/database/terminal/pingroup_terminal/PinGroupTerminal.rst.txt






:class:`PinGroupTerminal`
=========================


.. py:class:: pyedb.grpc.database.terminal.pingroup_terminal.PinGroupTerminal(pedb, edb_object)

   
   Manages pin group terminal properties.
















   ..
       !! processed by numpydoc !!



.. py:currentmodule:: PinGroupTerminal

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~create`
            - Create a pin group terminal.



   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - Terminal name.
          * - :py:attr:`~boundary_type`
            - Boundary type.
          * - :py:attr:`~is_port`
            - 
          * - :py:attr:`~magnitude`
            - Source magnitude.
          * - :py:attr:`~phase`
            - Source phase.
          * - :py:attr:`~source_amplitude`
            - Source amplitude.
          * - :py:attr:`~source_phase`
            - Source phase.
          * - :py:attr:`~impedance`
            - Terminal impedance.
          * - :py:attr:`~net`
            - Terminal net.
          * - :py:attr:`~pin_group`
            - Pingroup.
          * - :py:attr:`~terminal_type`
            - 
          * - :py:attr:`~is_null`
            - Check if the terminal is a null terminal.
          * - :py:attr:`~reference_terminal`
            - Reference terminal.
          * - :py:attr:`~is_reference_terminal`
            - Check if the terminal is a reference terminal.
          * - :py:attr:`~ref_terminal`
            - Property keeping DotNet compatibility
          * - :py:attr:`~hfss_type`
            - 
          * - :py:attr:`~is_current_source`
            - 
          * - :py:attr:`~is_voltage_source`
            - 


   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~core`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.grpc.database.terminal.pingroup_terminal import PinGroupTerminal

Property detail
---------------

.. py:property:: name
   :type: str


   
   Terminal name.



   :Returns:

       **str** : :obj:`terminal` name.
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: boundary_type
   :type: str


   
   Boundary type.



   :Returns:

       **str** : :obj:`boundary` type.
           ..

       `"voltage_source"`, `"current_source"`, `"port"`, `"voltage_probe"`.
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: is_port
   :type: bool


.. py:property:: magnitude
   :type: float


   
   Source magnitude.



   :Returns:

       **float** : :obj:`magnitude` value.
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: phase
   :type: float


   
   Source phase.



   :Returns:

       **float** : :obj:`phase` value.
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: source_amplitude
   :type: float


   
   Source amplitude.



   :Returns:

       **float** : :obj:`source` magnitude.
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: source_phase
   :type: float


   
   Source phase.



   :Returns:

       **foat** : :obj:`source` phase.
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: impedance
   :type: float


   
   Terminal impedance.



   :Returns:

       **float** : :obj:`terminal` impedance.
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: net
   :type: pyedb.grpc.database.net.net.Net


   
   Terminal net.



   :Returns:

       :class:`Net <pyedb.grpc.database.net.net.Net>`
           Terminal Net object.













   ..
       !! processed by numpydoc !!

.. py:property:: pin_group
   :type: any


   
   Pingroup.



   :Returns:

       :class:`PinGroup <pyedb.grpc.database.hierarchy.pingroup.PinGroup>`
           Terminal pingroup.













   ..
       !! processed by numpydoc !!

.. py:property:: terminal_type
   :type: str


.. py:property:: is_null
   :type: bool


   
   Check if the terminal is a null terminal.



   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           True if the terminal is null, False otherwise.













   ..
       !! processed by numpydoc !!

.. py:property:: reference_terminal
   :type: any


   
   Reference terminal.



   :Returns:

       :class:`PinGroupTerminal <pyedb.grpc.database.terminal.pingroup_terminal.PinGroupTerminal>`
           Reference terminal.













   ..
       !! processed by numpydoc !!

.. py:property:: is_reference_terminal
   :type: bool


   
   Check if the terminal is a reference terminal.



   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           True if the terminal is a reference terminal, False otherwise.













   ..
       !! processed by numpydoc !!

.. py:property:: ref_terminal

   
   Property keeping DotNet compatibility

   ..deprecated:: 0.43.0
      Use: func:`reference_terminal` property instead.















   ..
       !! processed by numpydoc !!

.. py:property:: hfss_type
   :type: str


.. py:property:: is_current_source
   :type: bool


.. py:property:: is_voltage_source



Attribute detail
----------------

.. py:attribute:: core



Method detail
-------------

.. py:method:: create(layout, name, pin_group, net=None, is_ref=False)
   :classmethod:


   
   Create a pin group terminal.
   Parameters
   ----------
   layout : :class:`.Layout`
       Layout to create the pin group terminal in.
   name : :obj:`str`
       Name of the pin group terminal.
   pin_group : :class:`.PinGroup`
       Pin group.
   net : :class:`.Net` or :obj:`str`, optional
       Net.
   is_ref : :obj:`bool`, default: False
       Whether the pin group terminal is a reference terminal.
   Returns
   -------
   PinGroupTerminal
















   ..
       !! processed by numpydoc !!




